Helix Bug Fix Mod 1.0.0

+ Combo meter now resets on restart, checkpoint and death
+ Fixed EJ spawning with electricity active in Throwback fight
+ Fixed bug where hitting a pulley above it max speed sets you to its min speed
+ Made pulley pillars not have collision if the pulley is there, so you can't hit it and lose your speed
+ Fixed spark and sfarx's shots sometimes colliding with the ground when shooting upwards
+ Fixed Fark and Reaper Jester "drifting" when using blink when not holding down the analog stick