@@ -90,6 +90,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MoreAccurateComboMeter.cs" />
     <Compile Include="DisableEJElectricity.cs" />
     <Compile Include="FixComboMeterReset.cs" />
     <Compile Include="FixDashBlinkDrift.cs" />
@@ -97,6 +98,7 @@
     <Compile Include="FixShotPosition.cs" />
     <Compile Include="HelixFixMod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SplitFinalUtopia.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
